# code-oracle

./: .env.example  .gitignore  README.md  main.py  mcp.py  pyproject.toml  run_mcp.sh
.cursor/rules/: general.mdc
app/ai/: prompt_loader.py
app/ai/agent_core/: base_agent.py  langchain_service.py  model_provider.py
app/ai/agents/: code_location_agent.py  hello_world_agent.py
app/ai/tools/: read_code.py
app/static_prompts/: CodeLocationAgent_system_prompt.md  HelloWorldAgent_system_prompt copy.md
app/util/: file_acceptor.py  file_traverser.py  logger.py
config/: env.py
